--- a/GameEditor/Base.lproj/ValueEditors.xib
+++ b/GameEditor/Base.lproj/ValueEditors.xib
@@ -963,13 +963,13 @@
             </constraints>
             <point key="canvasLocation" x="728" y="184.5"/>
         </tableCellView>
-        <tableCellView identifier="class" id="xvS-hY-Bup" userLabel="class">
+        <tableCellView identifier="header" id="xvS-hY-Bup" userLabel="header">
             <rect key="frame" x="0.0" y="0.0" width="78" height="20"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="DV1-4P-XVd">
+                <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" translatesAutoresizingMaskIntoConstraints="NO" id="DV1-4P-XVd" userLabel="Header">
                     <rect key="frame" x="3" y="3" width="77" height="14"/>
-                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Class" id="d8G-pr-wp7">
+                    <textFieldCell key="cell" lineBreakMode="truncatingTail" sendsActionOnEndEditing="YES" title="Header" id="d8G-pr-wp7" userLabel="Header">
                         <font key="font" metaFont="smallSystemBold"/>
                         <color key="textColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
                         <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
